# sqlite-regex-replace-ext

./: CMakeLists.txt  README  glib_replace.c  glib_replace.sh  icu_replace.c  icu_replace.sh  regex_replace.c  regex_replace.sh
.github/workflows/: cmake-single-platform.yml
